Set minimum Java version to 17